<resources>
    <string name="app_name">Calculadora</string>
    <string name="botonCE">CE</string>
    <string name="botonPorcentaje">%</string>
    <string name="botonMas">+</string>
    <string name="boton7">7</string>
    <string name="boton8">8</string>
    <string name="boton9">9</string>
    <string name="boton6">6</string>
    <string name="boton5">5</string>
    <string name="boton4">4</string>
    <string name="boton1">1</string>
    <string name="boton2">2</string>
    <string name="boton3">3</string>
    <string name="botonDecimal">.</string>
    <string name="boton0">0</string>
    <string name="botonMenos">-</string>
    <string name="botonDividir">/</string>
    <string name="botonPor">x</string>
    <string name="botonIgual">=</string>
    <string name="display" />

    <string name="marca">Calculadora Plim Plam</string>
   </resources>
