<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/idResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BCD4"
        android:gravity="right"
        android:text="@string/display"
        android:textSize="70sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/marca" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/idCE"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:width="120dip"
                    android:background="#CDDC39"
                    android:minWidth="30dp"
                    android:minHeight="88dip"
                    android:onClick="botonPulsado"
                    android:text="@string/botonCE"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/idPorcentaje"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:width="120dip"
                    android:minWidth="30dp"
                    android:minHeight="88dip"
                    android:onClick="botonPulsado"
                    android:text="@string/botonPorcentaje"
                    android:textColor="#009688"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/idMas"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:width="120dip"
                    android:minWidth="30dp"
                    android:minHeight="88dip"
                    android:onClick="botonPulsado"
                    android:text="@string/botonMas"
                    android:textColor="#009688"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/id7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:width="120dip"
                    android:maxWidth="60dp"
                    android:minWidth="30dp"
                    android:minHeight="88dip"
                    android:onClick="botonPulsado"
                    android:text="@string/boton7"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/id8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:width="120dip"
                    android:maxWidth="60dp"
                    android:minWidth="30dp"
                    android:minHeight="88dip"
                    android:onClick="botonPulsado"
                    android:text="@string/boton8"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/id9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:width="120dip"
                    android:maxWidth="60dp"
                    android:minWidth="30dp"
                    android:minHeight="88dip"
                    android:onClick="botonPulsado"
                    android:text="@string/boton9"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/id4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:width="120dip"
                    android:maxWidth="60dp"
                    android:minWidth="30dp"
                    android:minHeight="88dip"
                    android:onClick="botonPulsado"
                    android:text="@string/boton4"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/id5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:width="120dip"
                    android:maxWidth="60dp"
                    android:minWidth="30dp"
                    android:minHeight="88dip"
                    android:onClick="botonPulsado"
                    android:text="@string/boton5"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/id6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:width="120dip"
                    android:maxWidth="60dp"
                    android:minWidth="30dp"
                    android:minHeight="88dip"
                    android:onClick="botonPulsado"
                    android:text="@string/boton6"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/id1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:width="120dip"
                    android:maxWidth="60dp"
                    android:minWidth="30dp"
                    android:minHeight="88dip"
                    android:onClick="botonPulsado"
                    android:text="@string/boton1"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/id2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:width="120dip"
                    android:maxWidth="60dp"
                    android:minWidth="30dp"
                    android:minHeight="88dip"
                    android:onClick="botonPulsado"
                    android:text="@string/boton2"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/id3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:width="120dip"
                    android:maxWidth="60dp"
                    android:minWidth="30dp"
                    android:minHeight="88dip"
                    android:onClick="botonPulsado"
                    android:text="@string/boton3"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/id0"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:width="120dip"
                    android:minHeight="88dip"
                    android:onClick="botonPulsado"
                    android:text="@string/boton0"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/idDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:width="120dip"
                    android:maxWidth="60dp"
                    android:minWidth="30dp"
                    android:minHeight="88dip"
                    android:onClick="botonPulsado"
                    android:text="@string/botonDecimal"
                    android:textColor="#F44336"
                    android:textSize="40sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/idMenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:width="120dip"
                android:minWidth="30dp"
                android:minHeight="88dip"
                android:onClick="botonPulsado"
                android:text="@string/botonMenos"
                android:textColor="#009688"
                android:textSize="40sp" />

            <Button
                android:id="@+id/idDividir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:width="120dip"
                android:minWidth="30dp"
                android:minHeight="88dip"
                android:onClick="botonPulsado"
                android:text="@string/botonDividir"
                android:textColor="#009688"
                android:textSize="40sp" />

            <Button
                android:id="@+id/idPor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:width="120dip"
                android:minWidth="30dp"
                android:minHeight="88dip"
                android:onClick="botonPulsado"
                android:text="@string/botonPor"
                android:textColor="#009688"
                android:textSize="40sp" />

            <Button
                android:id="@+id/idIgual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:width="120dip"
                android:background="#FF5722"
                android:minWidth="30dp"
                android:minHeight="176dip"
                android:onClick="botonPulsado"
                android:text="@string/botonIgual"
                android:textSize="40sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>